# logistics_envs

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
logistics_envs/: __init__.py
logistics_envs/envs/: __init__.py  logistics_sim_wrapper_env.py  q_commerce_env.py  ride_hailing_env.py  ride_hailing_env_config.py  vrp_env.py
logistics_envs/sim/: __init__.py  logistics_simulator.py  routing_provider.py  utils.py
logistics_envs/sim/order_generators/: __init__.py  depot_random_order_generator.py  order_generator.py  predefined_order_generator.py  random_order_generator.py
logistics_envs/sim/structs/: action.py  common.py  config.py  info.py  observation.py  order.py  service_station.py  worker.py
logistics_envs/utils/: __init__.py  utils.py
test_data/ride_hailing/: example.xlsx  example_geographic.xlsx  ride_hailing_example.csv  ride_hailing_example.xlsx  test_cartesian.xlsx  test_geographic.xlsx
tests/: test_logistics_simulator.py
tests/envs/: test_q_commerce_env.py  test_ride_hailing_env.py
tests/sim/: test_logistics_simulator.py  test_utils.py
