[tool.poetry]
name = "logistics-envs"
version = "0.1.0"
description = "Gym environments for generic logistics tasks"
authors = ["Daniil Burakov <sarrasorwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.29.1"
pygame = "^2.5.2"
numpy = "^1.26.4"
pydantic = "^2.6.4"
bidict = "^0.23.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
